# markenz

./: .gitignore  AMP_REPAIR_REPORT.md  ANTIGRAVITY_AUDIT_REPORT_PHASE_0.md  AUDIT_COMPLETE_READ_ME_FIRST.md  AUDIT_GUIDE.md  AUDIT_INDEX.md  AUDIT_WORK_COMPLETED.md  COMPREHENSIVE_CODE_AUDIT.md  CRITICAL_GAPS_AND_BLOCKERS.md  Cargo.toml  DETERMINISM_TEST_RESULTS.md  DOCUMENTATION_CHANGELOG.md  EXECUTIVE_ONE_PAGER.md  EXECUTIVE_OVERVIEW.md  IMPLEMENTATION_STATUS_REPORT.md  Justfile  KAIZA_MCP_SETUP.md  PHASE_0_1_2_COMPLETION_PLAN.md  PHASE_0_COMPLETION_REPORT.md  PHASE_0_IMPLEMENTATION_REPORT.md  PHASE_0_VERIFICATION_REPORT.md  PHASE_1_DETERMINISM_IMPLEMENTATION_REPORT.md  PHASE_PLANS_INDEX.txt  PHASE_PLANS_SPLIT_COMPLETE.md  README.md  REALITY_LOCK_ENFORCEMENT_SUMMARY.md  RUST_REALITY_LOCK_IMPLEMENTATION_REPORT.md  SESSION_SUMMARY.md  WINDSURF_PHASE_0_EXECUTION_COMPLETE.md  ci_phase1_determinism.sh  deny.toml  docker-compose.yml  test_events.json
.github/workflows/: phase-0-ci.yml
agents/gem-d/: body.json  identity.json
agents/gem-k/: body.json  identity.json
apps/engine/: Cargo.toml  Dockerfile
apps/engine/src/: authority_pipeline.rs  authority_pipeline_fixed.rs  boot_validation.rs  deterministic_world_loop.rs  genesis.rs  genesis_assets.rs  lib.rs  main.rs  snapshot_handler.rs  tick_loop.rs
apps/server/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/web/: Cargo.toml  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.css  App.tsx  index.css  main.tsx
apps/web/src/components/: RngAuditViewer.tsx
apps/web/src/features/auth/: AuthProvider.tsx
apps/web/src/features/chat/: Chat.tsx
apps/web/src/features/debug/: DebugPanel.tsx
apps/web/src/features/renderer/: Renderer.tsx
apps/web/src/pages/: DeterminismStatusPage.tsx
cosmos/: WORLD_MODEL.md  armory.ts  homestead.ts  red-room.ts  upgrade-embodied-emotion-system.js  upgrade-world-simulation.js  virtual-computer.js  world-manager.js  world-simulation-engine.js
cosmos/entities/: Ecosystem.ts  EntityRegistry.ts
cosmos/planet/: PlanetarySystem.ts
cosmos/world/: PHASE_0a_EXECUTION_REPORT.md  World.ts  WorldClock.ts  data-store.ts  homestead.ts  shed.ts  stream-physics.ts  test-world-clock.ts  world-manager.ts
crates/biology/: Cargo.toml
crates/biology/src/: endocrine.rs  fatigue.rs  hydration.rs  injury.rs  lib.rs  metabolism.rs  nutrition.rs  reproductive.rs  state.rs  veto.rs
crates/deterministic/: Cargo.toml
crates/events/: Cargo.toml
crates/events/src/: input_event.rs  lib.rs  observation_event.rs
crates/events/tests/: determinism_test.rs
crates/genetics/: Cargo.toml
crates/persistence/: Cargo.toml
crates/persistence/src/: database.rs  lib.rs  replay.rs  snapshot.rs
crates/physics/: Cargo.toml
crates/protocol/: Cargo.toml
crates/rng/: Cargo.toml
crates/world/: Cargo.toml
crates/world/src/: action.rs  agent_location.rs  asset.rs  biome_generator.rs  building.rs  collision_test.rs  config.rs  crafting.rs  gathering.rs  hashing.rs  inventory.rs  lib.rs  mining.rs  phase0_tests.rs  terrain.rs  terrain_test.rs  types.rs  universe.rs  world.rs
crates/world/src/bio/: cognition_hooks.rs  complete_biology.rs  genetics.rs  health.rs  metabolism.rs  mod.rs  nutrition.rs  observation.rs  state.rs  tests.rs
crates/world/src/cognition/: intent.rs  memory.rs  mod.rs  perception.rs  planning.rs  tests.rs  thoughts.rs
docs/: AMP_NORMALIZATION_REPORT.md  DOCS_AS_PRODUCT_FRAMEWORK.md  DOCUMENTATION_CHANGELOG.md  DOCUMENTATION_VERSIONING_STRATEGY.md  EXECUTION_AUTHORITY_CHAIN.md
docs/adr/: 0000-adr-template.md  0001-record-architecture-decisions.md  0002-docs-as-product-strategy.md  0003-deterministic-engine-architecture.md  0004-biological-agent-simulation.md  README.md
docs/antigravity/: MARKENZ_ANTIGRAVITY_PLANNING_PACKAGE_v1.md  MARKENZ_UNIFIED_MASTER_PLAN.md
docs/architecture/: SYSTEM_ARCHITECTURE.md
docs/archived/: PLAN_PHASE_0_NORMALIZED.md  PLAN_PHASE_1_NORMALIZED.md  PLAN_PHASE_2_NORMALIZED.md  PLAN_PHASE_3_NORMALIZED.md  PLAN_PHASE_4_NORMALIZED.md  PLAN_PHASE_5_NORMALIZED.md  PLAN_PHASE_6_NORMALIZED.md  PLAN_PHASE_7_NORMALIZED.md  PLAN_PHASE_8_NORMALIZED.md  PLAN_PHASE_9_NORMALIZED.md  VERIFIED_PLANS_SUMMARY.md  WINDSURF_EXECUTION_PROMPT_CANONICAL.md  WINDSURF_PHASE_3_EXECUTION_REPORT.md
docs/audit/: PASS_2_REPO_REALITY_AUDIT.md  REUSE_CERTIFICATION_AUDIT_REPORT.md
docs/audits/: AMP_PLAN_NORMALIZATION_REPORT.md  AMP_ROADMAP_INTEGRATION_AUDIT.md  AMP_RUST_FORENSIC_ANTI_BULLSHIT_REPORT.md  AMP_WINDSURF_EXECUTABILITY_AUDIT.md  AMP_WINDSURF_EXECUTION_SAFETY_AUDIT.md  MARKENZ_GOVERNANCE_PHASE_COVERAGE_AUDIT.md
docs/determinism/: DETERMINISM_AND_REPLAY.md
docs/diagrams/: README.md
docs/execution/: ADDENDUM_IDENTITY_CONTINUITY_v1.md  ADDENDUM_WORLD_PRESERVATION_v1.md  PATCH_INSTRUCTIONS_PHASE0_PHASE1_v1.md  PLAN_NORMALIZATION_AUDIT_COMPLETE.md
docs/governance/: AMP_DEFINITION_OF_DONE.md  FOUNDER_AMPLIFICATION_AND_CAPABILITY_BOUNDS.md  GOVERNANCE_AND_LAWS.md  KAIZA_COMPLETE_GUIDE.md  MARKENZ_REPO_REFACTOR_MAP.md  MARKENZ_REPO_REFACTOR_MAPv2.md  RUST_REALITY_LOCK.md  VERIFIED_GOVERNANCE_PLANS.md
docs/integration/: MARKENZ_LEGACY_SYSTEM_INTEGRATION_PLAN.md
docs/normalized/: M1_TO_GLOBAL_PHASE_CROSSWALK.md  NORMALIZED_PLAN_INDEX.md
docs/plans/: AMP_NO_PLACEHOLDER_AUDIT_PHASE_0_1_2.md  AMP_REAUDIT_PHASE_0_1_2_NO_PLACEHOLDERS.md  GOVERNANCE_AMP_DEFINITION_OF_DONE_v2.md  GOVERNANCE_EXECUTION_ROADMAP_v2.md  GOVERNANCE_SELF_EVOLUTION_LAW_v2.md  GOVERNANCE_TARGET_ARCHITECTURE_v2.md  GOVERNING_LAW_AGENT_PARITY_AND_AGENT_FOLDERS.md  MARKENZ_GEMINI_TO_MARKENZ_INTEGRATION_PLAN_v1.md  MARKENZ_GEMINI_TO_MARKENZ_INTEGRATION_PLAN_v2.md  MARKENZ_M1_FOUNDATION.md  MARKENZ_PHASE_0_1_2_REMEDIATION_PLAN_v1.md  (+37 more)
identity/: gem-didentity-profile.js  gem-kidentity-profile.js  identity-invariants-engine.js
tests/: determinism.rs  phase0_determinism_test.rs  phase0_unit_tests.rs  phase1_determinism.rs  phase1_determinism_tests.rs  replay_harness.rs
tools/db-migrate/: Cargo.toml  main.rs
(+119 files in other folders)
