[workspace]
members = [
    "apps/engine",
    "crates/world",
    "crates/physics",
    "crates/events",
    "crates/persistence",
    "crates/rng",
    "crates/biology",
    "crates/genetics",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
bincode = "1.3"
hex = "0.4"
rand_chacha = "0.3"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

##############################################################################
# LINT CONFIGURATION (RUST REALITY LOCK)
#
# Purpose: Enforce fail-closed policy on placeholder code, unsafe patterns,
#          and incomplete implementations in production paths.
#
# Authority: docs/governance/RUST_REALITY_LOCK.md
#
# These lints are workspace-level defaults. Individual crates may override
# with stricter settings.
#
# What these rules enforce:
# - todo!(), unimplemented!() are forbidden (indicates incomplete code)
# - unwrap(), expect() are forbidden outside tests (missing error handling)
# - panic in any form is discouraged (should be explicit errors)
#
# What these rules do NOT enforce:
# - They do not prevent bugs in correct implementations
# - They do not catch logic errors
# - They are format/pattern violations only
#
##############################################################################

[workspace.lints.rust]
# Safety and completeness
unsafe_code = "deny"
missing_docs = "warn"
unused_results = "deny"

[workspace.lints.clippy]
# Banned: placeholder macros
todo = "deny"
unimplemented = "deny"

# Banned: unsafe error handling in production
unwrap_used = "deny"
expect_used = "deny"

# Banned: panic should be explicit error handling, not silent failures
panic = "deny"

# Code quality (warn level; can be override in specific crates)
# NOTE: Fixed priority to avoid lint group priority conflicts
all = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
