[package]
name = "markenz-world"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
rand_chacha = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }

# Local dependencies
rng = { path = "../rng" }
physics = { path = "../physics" }
markenz-events = { path = "../events" }

[dependencies.chacha20]
version = "0.9"
features = ["std"]
