[package]
name = "markenz-world"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.rust]
missing_docs = "allow"

[lints.clippy]
new_without_default = "allow"
needless_borrow = "allow"
unnecessary_min_or_max = "allow"
cast_abs_to_unsigned = "allow"
clone_on_copy = "allow"
len_zero = "allow"
empty_line_after_doc_comments = "allow"
iter_kv_map = "allow"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
rand_chacha = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }

# Local dependencies
rng = { path = "../rng" }
physics = { path = "../physics" }
markenz-events = { path = "../events" }

[dependencies.chacha20]
version = "0.9"
features = ["std"]
