[package]
name = "db-migrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "db-migrate"
path = "main.rs"

[dependencies]
# rusqlite = { workspace = true }  # Commented out due to dependency conflicts
# rand = { workspace = true }  # Commented out due to dependency conflicts
# blake3 = { workspace = true }  # Commented out due to dependency conflicts
